Corrected side-toc's embedded list-item's visibility
Update side-toc.sass

--- a/source-assets/styles2022/sass/custom/side-toc.sass
+++ b/source-assets/styles2022/sass/custom/side-toc.sass
@@ -117,7 +117,8 @@ $you_are_here_weight: 600
     > li:not(.active)
       > ol
         > *
-          display: none
+          // display: none
+          visibility: hidden
 
   li
 
